# nStateFlags

./: CMakeLists.txt  README.md  nStateFlags.sln
src/: CMakeLists.txt  Config.c  Config.h  FlagEnum.h  FlagInformation.c  FlagInformation.h  Font.c  Font.h  ImageLoader.c  ImageLoader.h  MainMenu.c  MainMenu.h  Makefile  Replacements.c  Replacements.h  ShowFlagDetails.c  ShowFlagDetails.h  Thumbnail.c  Thumbnail.h  main.c  nStateFlags.vcxproj  nStateFlags.vcxproj.filters
src/ArchiveLib/: ArchiveEntry.c  ArchiveLib.c  ArchiveTable.c  CMakeLists.txt  Makefile
src/Images/: Makefile
src/include/ArchiveLib/: ArchiveLib.h
src/libjpeg/: CMakeLists.txt  jdatasrc.c  jdcoefct.c  jdcolor.c  jdmerge.c  jdpostct.c  jdsample.c  jinclude.h  jmemname.c  jmemnobs.c  jquant1.c  jquant2.c
src/libz/: CMakeLists.txt  Makefile  inflate.c  zconf.h  zutil.h
